test/classes/initializers/phase1/deeperOn.good
deeperOn.chpl:4: In initializer:
deeperOn.chpl:8: error: can't initialize field "x" inside a parallel statement during phase 1 of initialization
